# auth99-backend

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  alembic.ini  compose.yaml  pyproject.toml
app/api/: main.py
app/core/: config.py  database.py
app/models/: companies.py  users.py  works.py
migrations/: env.py
migrations/versions/: 24b384fd629b_.py  6c7aabee220f_create_tables.py
