[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Akito Koga"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.103.1"
uvicorn = {extras = ["standard"], version = "^0.23.2"}
isort = "^5.13.2"
black = "^24.4.2"
flake8 = "^7.0.0"
sqlalchemy = "^2.0.30"
pydantic-settings = "^2.2.1"
alembic = "^1.13.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
